# lucienbot

./: .coverage  .env.example  .gitignore  .railwayignore  AGENTS.md  CLAUDE.md  DEPLOY.md  Procfile  README.md  architecture.md  bot.py  decisions.md  deployment_logs_railway_1777946677918.log.txt  install.bat  install.sh  log.md  lucien_bit.db.bk  pyproject.toml  railway.toml  requirements.txt  rules.md  run_critical_tests.py
.github/: dependabot.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.qwen/: settings.json  settings.json.orig
alembic/: env.py
config/: CLAUDE.md  __init__.py  settings.py
docs/: MIGRACION_PRODUCCION.md  conf_gam.md  copy-minijuegos-rediseno.md  guia-estilo.md  preguntas.json  preguntas_mayo.json  reporte_seguridad.md  req_fase10.md  webapp-setup.md
handlers/: CLAUDE.md  __init__.py  admin_handlers.py  analytics_handlers.py  backpack_handler.py  broadcast_handlers.py  category_admin_handlers.py  channel_handlers.py  chat_action_middleware.py  common_handlers.py  free_channel_handlers.py  game_user_handlers.py  gamification_admin_handlers.py  gamification_user_handlers.py  mission_admin_handlers.py  mission_user_handlers.py  package_handlers.py  promotion_admin_handlers.py  promotion_user_handlers.py  question_set_admin_handlers.py  rate_limit_middleware.py  reward_admin_handlers.py  reward_user_handlers.py  store_admin_handlers.py  store_user_handlers.py  story_admin_handlers.py  story_user_handlers.py  trivia_discount_admin_handlers.py  trivia_stats_admin_handlers.py  vip_handlers.py  vip_user_handlers.py
keyboards/: CLAUDE.md  __init__.py  inline_keyboards.py
migrations/: README.txt
models/: CLAUDE.md  __init__.py  database.py  models.py
scripts/: backup_db.py  cleanup_duplicate_reactions.py  migrate_config_to_production.py  migrate_services.py  migration_production.sql
services/: CLAUDE.md  __init__.py  analytics_service.py  backpack_service.py  (+18 more)
(+177 files in other folders)
